--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@sendgrid/mail": "^7.7.0",
         "bcrypt": "^5.1.0",
+        "cloudinary": "^1.37.1",
         "cors": "2.8.5",
         "cross-env": "7.0.3",
         "dotenv": "^16.0.3",
