--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "mongoose": "^7.1.1",
         "morgan": "1.10.0",
         "multer": "^1.4.5-lts.1",
-        "shortid": "^2.2.16"
+        "shortid": "^2.2.16",
+        "swagger-ui-express": "^4.6.3"
     },
     "devDependencies": {
         "eslint": "^7.19.0",
