--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,6 @@
-DB_HOST
-PORT
-SECRET_KEY
-SENDGRID_API_KEY
-BASE_URL
+DB_HOST=
+PORT=
+SECRET_KEY=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
