--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "lint:fix": "eslint --fix **/*.js"
     },
     "dependencies": {
+        "@joi/date": "^2.1.0",
         "@sendgrid/mail": "^7.7.0",
         "bcrypt": "^5.1.0",
         "cloudinary": "^1.37.1",
