--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "cross-env": "7.0.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "google-auth-library": "^8.8.0",
         "gravatar": "^1.8.2",
         "jimp": "^0.22.8",
         "joi": "^17.9.2",
